Fix navigation on tablet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,6 @@ article {
     /* Header */
     header {
         padding: 2rem;
-        height: 100px;
     }
 
     nav {
